# named_return

./: Cargo.toml  README.md
src/: lib.rs  resyn.rs
src/resyn/: item_fn.rs
src/resyn/item_fn/: fn_decl.rs
src/resyn/item_fn/fn_decl/: return_type.rs
src/resyn/item_fn/fn_decl/return_type/: named.rs
src/resyn/item_fn/fn_decl/return_type/named/: fn_arg_ret.rs
tests/: test.rs
